package Item;

public interface Buyable {

    public int buy(int playerMoney);

}
