package gameData;

public enum facing {
    NORTH,
    EAST,
    SOUTH,
    WEST
}
